--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ svg.append("text")
         .attr("x", w/2)
 		.attr("y", h/2+radiusCenter/4)
 		.attr("text-anchor", "middle")
-        .text("π")
+        .text("HUHHU")
 		.attr("font-size", radiusCenter+"px")
 		.attr("fill", "black")
 		.attr("opacity", 0)
