--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@ centerCircle = svg.append("circle")
 
 
 svg.append("text")
-.attr("class", "circleTxt")
+
         .attr("x", w/2)
 		.attr("y", h/2+radiusCenter/4)
 		.attr("text-anchor", "middle")
-        .text("pi")
+        .text("π")
 		.attr("font-size", radiusCenter+"px")
 		.attr("fill", "black")
 		.attr("opacity", 0)
